--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
