made some changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://vini-501.github.io/react-portfolio",
+  "homepage": "/react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
